--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: "Asia/Saigon"
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: d7cky
-  email: example@domain.com # change to your email address
+  email: d3cky.duck@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://x.com/ducky48869374 # change to your Twitter homepage
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
