--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -50,7 +50,10 @@ jobs:
       #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       #     cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Install Bundler
-        run: gem install bundler
+        run: gem install bundler --user-install
+
+      - name: Update PATH for Bundler
+        run: echo 'export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"' >> $GITHUB_ENV
 
       - name: Install dependencies
         run: bundle install
