--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -53,7 +53,10 @@ jobs:
         run: gem install bundler --user-install
 
       - name: Update PATH for Bundler
-        run: echo 'export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"' >> $GITHUB_ENV
+        run: echo 'PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"' >> $GITHUB_ENV
+
+      - name: Reload PATH
+        run: source $GITHUB_ENV
 
       - name: Install dependencies
         run: bundle install
