--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,33 +33,38 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # - name: Install Ruby 3.3.0-preview3 manually
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y curl git
-      #     curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
-      #     export PATH="$HOME/.rbenv/bin:$PATH"
-      #     eval "$(rbenv init - bash)"
-      #     rbenv install 3.3.0-preview3
-      #     rbenv global 3.3.0-preview3
-      #     ruby --version
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
-        with:
-          ruby-version: '3.2.2' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
-      # - name: Install Bundler
-      #   run: gem install bundler --user-install
+      - name: Install Ruby 3.3.0-preview3 manually
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl git
+          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init - bash)"
+          rbenv install 3.3.0-preview3
+          rbenv global 3.3.0-preview3
+          ruby --version
+      # - name: Setup Ruby
+      #   uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
+      #   with:
+      #     ruby-version: '3.2.2' # Not needed with a .ruby-version file
+      #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      #     cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Install Bundler
+        run: gem install bundler --user-install
 
-      # - name: Update PATH for Bundler
-      #   run: echo 'PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"' >> $GITHUB_ENV
+      - name: Verify Bundler installation
+        run: |
+          echo "Bundler path: $(gem which bundler)"
+          echo "Gem binary directory: $(gem env gemdir)/bin"
 
-      # - name: Reload PATH
-      #   run: source $GITHUB_ENV
+      - name: Update PATH for Bundler
+        run: echo 'PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"' >> $GITHUB_ENV
 
-      # - name: Install dependencies
-      #   run: bundle install
+      - name: Reload PATH
+        run: source $GITHUB_ENV
+
+      - name: Install dependencies
+        run: bundle install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
