--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,47 +33,48 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Ruby 3.3.0-preview3 manually
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl git
-          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
-          export PATH="$HOME/.rbenv/bin:$PATH"
-          eval "$(rbenv init - bash)"
-          rbenv install 3.3.0-preview3
-          rbenv global 3.3.0-preview3
-          ruby --version
-      # - name: Setup Ruby
-      #   uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
-      #   with:
-      #     ruby-version: '3.2.2' # Not needed with a .ruby-version file
-      #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      #     cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Install Bundler
-        run: gem install bundler --user-install
+      # - name: Install Ruby 3.3.0-preview3 manually
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y curl git
+      #     curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+      #     export PATH="$HOME/.rbenv/bin:$PATH"
+      #     eval "$(rbenv init - bash)"
+      #     rbenv install 3.3.0-preview3
+      #     rbenv global 3.3.0-preview3
+      #     ruby --version
+      - name: Setup Ruby
+        # uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2.2' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
+      # - name: Install Bundler
+      #   run: gem install bundler --user-install
       
-      - name: Export Bundler path
-        run: |
-          export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
-          echo "::add-path::$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin"
-          echo "::set-env name=PATH::$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
+      # - name: Export Bundler path
+      #   run: |
+      #     export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
+      #     echo "::add-path::$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin"
+      #     echo "::set-env name=PATH::$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
 
-      - name: Verify Bundler installation
-        run: |
-          export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
-          bundle --version
+      # - name: Verify Bundler installation
+      #   run: |
+      #     export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
+      #     bundle --version
 
-      - name: Update PATH for Bundler
-        run: echo 'PATH=$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH' >> $GITHUB_ENV
+      # - name: Update PATH for Bundler
+      #   run: echo 'PATH=$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH' >> $GITHUB_ENV
 
 
-      - name: Reload PATH
-        run: source $GITHUB_ENV
+      # - name: Reload PATH
+      #   run: source $GITHUB_ENV
 
-      - name: Install dependencies
-        run: |
-          export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
-          bundle install
+      # - name: Install dependencies
+      #   run: |
+      #     export PATH="$HOME/.gem/ruby/$(ls $HOME/.gem/ruby)/bin:$PATH"
+      #     bundle install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
